@@ -6,6 +6,8 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.LinkedList;
+import java.util.Queue;
 
 /**
  * This class creates a register that handles Activity objects.
@@ -17,8 +19,11 @@ import java.util.Collections;
 public class ActivityManager {
 
   private ArrayList<Activity> activityRegister;
+  private final Queue<Activity> postponedActivities;
+
   public ActivityManager(String file) {
     readRegister(file);
+    postponedActivities = new LinkedList<>();
   }
 
   private void readRegister(String file) {
@@ -51,32 +56,41 @@ public class ActivityManager {
   /**
    * Method returns random {@link Activity}-object from {@link #activityRegister}
    * Randomization is achieved by shuffling the list.
-   * @author Edvin Topalovic
+   *
    * @return {@link Activity}-object
+   * @author Edvin Topalovic
    */
   public Activity getActivity() {
+    if (!postponedActivities.isEmpty()) {
+      return postponedActivities.remove();
+    }
+
     Collections.shuffle(activityRegister);
-    return activityRegister.get(0);
+    return activityRegister.getFirst();
   }
 
   /**
    * Method returns {@link Activity}-object by ID from {@link #activityRegister}
-   * @author Edvin Topalovic
+   *
    * @param id
    * @return {@link Activity}-object
+   * @author Edvin Topalovic
    */
   public Activity getActivity(int id) {
-    for (Activity activity: activityRegister) {
-      if (activity.getActivityID() == id) { return activity; }
+    for (Activity activity : activityRegister) {
+      if (activity.getActivityID() == id) {
+        return activity;
+      }
     }
     return null;
   }
 
   /**
    * Method allows user to add custom activities to {@link #activityRegister}
-   * @author Edvin Topalovic
+   *
    * @param name, inst, info
    * @return {@link Activity}-object
+   * @author Edvin Topalovic
    */
   public Activity createActivity(String name, String inst, String info) {
     Activity activity = new Activity();
@@ -92,4 +106,13 @@ public class ActivityManager {
 
     return getActivity(newId);
   }
+
+  public void enqueueActivity(Activity activity) {
+    postponedActivities.add(activity);
+  }
+
+  public Queue<Activity> getPostponedActivities() {
+    return postponedActivities;
+  }
+
 }
